
2005-04-04  Martin Vermeer  <martin.vermeer@hut.fi>
	* math_amsarrayinset.C:
	* math_casesinset.C:
	* math_gridinset.C:
	* math_gridinset.h: Add drawWithMargin method for use by
	AMSArray and Cases, to position corner markers right

2005-03-31  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* math_amsarrayinset.[Ch], math_tabularinset.[Ch],
	math_splitinset.[Ch] (infoize): implement
	* math_casesinset.C (getStatus, doDispatch): use cmd.argument directly
	* math_gridinset.C (getStatus): ditto
	* math_arrayinset.C (infoize): generalize

2005-03-30  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_amsarrayinset.[Ch] (getStatus):
	* math_splitinset.[Ch] (getStatus):
	* math_substackinset.[Ch]: suppress output of vertical gridlines
	where appropriate

2005-04-03  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_fontinset.[Ch] (draw): add call to setPosCache, 
	fixes bug 1796

2005-04-01  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_data.C (x2pos): fix math cursor positioning bug

2005-03-27  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* math_amsarrayinset.[Ch] (validate): new, require amsmath
	* math_substackinset.[Ch] (validate): ditto
	* math_arrayinset.[Ch] (validate): ditto (in the case of subarray)

2005-03-24  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_hullinset.C:
	* math_casesinset.[Ch]: more precise conditioning of
	output of vertical grid lines

2005-03-22  Martin Vermeer  <martin.vermeer@hut.fi>

	* math_hullinset.C (getStatus): intercept and suppress the
	adding of grid lines in case of a plain equation hull

2005-03-15  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* math_nestinset.C (doDispatch): create a MathBoxInset for mbox
	rather than a MathMBoxInset, since the latter is not usable yet.
	Fixes bug 1823.
	* math_factory.C (createMathInset): Don't hardwire mbox, but read it
	from lib/symbols again. This makes it possible to create other
	"mbox-like" boxes.

2005-03-02  Georg Baum  <Georg.Baum@post.rwth-aachen.de>
